Fix z-index modal bug.
When window is small (mobile view) the sidenav overlays the modal for creating new lists.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -162,7 +162,7 @@
     box-sizing: border-box;
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     left: 0;
     top: 0;
     width: 100%;
